PyMaker/datas/object2/RawHTML/i16101/Python_DOC_referPages.python-3-4-1-invalid-syntax.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/826948/syntax-error-on-print-with-python-3">Syntax error on print with Python 3 [duplicate]</a>
<span class="question-originals-answer-count">
                    9 answers
                </span>
</li>
</ul>
</div>
<p>I was doing a program that showed several prime numbers,is necessary to use functions.
For example 1 at 10 = 2,3,5,7</p>
<p>but appear   an error in the last line in the - print i- only ... I can't understand what is that</p>
<pre><code>def isPrime(num):
    if num &lt; 2:
        return False

    i = 2
    for i in range(2,int(math.sqrt(num)+1)):
        if (num % i == 0):
            return False

    return True

def main():
    print ("this program do prime numbers")
    start = int(raw_input("start number "))
    finish = int(raw_input('finish number: '))

    for i in range(start,finish):
        if isPrime(i):
            print i
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>Your problem is that you are not surrounding the <code>i</code> in <code>print i</code> with parentheses. <a href="https://docs.python.org/3/whatsnew/3.0.html#print-is-a-function" rel="nofollow">In Python 3, <code>print</code> has been changed from a statement to a function.</a> Here is your edited code:</p>
<pre><code>def isPrime(num):
    if num &lt; 2:
        return False

    i = 2
    for i in range(2,int(math.sqrt(num)+1)):
        if (num % i == 0):
            return False

    return True

def main():
    print ("this program do prime numbers")
    start = int(raw_input("start number "))
    finish = int(raw_input('finish number: '))

    for i in range(start,finish):
        if isPrime(i):
            print(i) #Previously "print i"
</code></pre>
<p>Previously running:</p>
<pre><code>bash-3.2$ python3.4 prime.py
  File "test.py", line 19
    print i
          ^
SyntaxError: invalid syntax
bash-3.2$
</code></pre>
<p>After editing:</p>
<pre><code>bash-3.2$ python3.4 prime.py
bash-3.2$
</code></pre>
</div>
<span class="comment-copy">I find it helps to google error messages.  <code>python print syntax error</code> would have solved the problem.  (Note that there are other issues here-- you'll get a NameError from <code>raw_input</code>, for example, but googling will solve that too.)</span>
<span class="comment-copy">@nneonneo - so, thinked is this too, but I tried to change, but not works</span>
<span class="comment-copy">So what error do you get?</span>
<span class="comment-copy">@Tom Dalton -  invalid syntax error,it indicates the i, but tried to change for (i), but the same error appear ... I can't understand what's wrong</span>
<span class="comment-copy">@Martijn Pieters - I think I didn't understand well ... sorry</span>
